--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-parallel-collections -->
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-parallel-collections_2.13</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
