--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,20 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-parallel-collections -->
+<!--    <dependency>-->
+<!--      <groupId>org.scala-lang.modules</groupId>-->
+<!--      <artifactId>scala-parallel-collections_2.13</artifactId>-->
+<!--      <version>1.0.0</version>-->
+<!--    </dependency>-->
+
+
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
     <dependency>
-      <groupId>org.scala-lang.modules</groupId>
-      <artifactId>scala-parallel-collections_2.13</artifactId>
-      <version>1.0.0</version>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.12</artifactId>
+      <version>3.0.0</version>
     </dependency>
+
 
 
   </dependencies>
