--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
       <version>3.0.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-yarn_2.12</artifactId>
+      <version>3.0.0</version>
+    </dependency>
 
 
   </dependencies>
