--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 
     <dependency>
       <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.12</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.spark</groupId>
       <artifactId>spark-yarn_2.12</artifactId>
       <version>3.0.0</version>
     </dependency>
