--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
     </dependency>
 
 
+
+
     <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive -->
     <dependency>
       <groupId>org.apache.spark</groupId>
@@ -83,6 +85,14 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.12</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-graphx -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-graphx_2.12</artifactId>
       <version>3.0.0</version>
     </dependency>
 
